# udemy-python-project

./: .gitignore  README.md
todo_app/: Makefile  pyproject.toml  todo.db
todo_app/src/: db.py  main.py
todo_app/tests/: test_db.py
