[tool.poetry]
name = "todo-app"
version = "0.1.0"
description = ""
authors = ["Mohammed Abbas"]
readme = "README.md"
packages = [{include = "todo_app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
