[tool.poetry]
name = "todo-app"
version = "0.1.0"
description = ""
authors = ["Mohammed Abbas"]
readme = "README.md"
packages = [{include = "todo_app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.4.2"
black = "^25.9.0"
streamlit = "^1.51.0"
pandas = "^2.3.3"

[tool.black]
line-length = 88

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
