[tool.poetry]
name = "todo-app"
version = "0.1.0"
description = ""
authors = ["Mohammed Abbas"]
readme = "README.md"
packages = [{include = "todo_app", from = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^8.4.2"
streamlit = "^1.51.0"
pandas = "^2.3.3"
ruff = "^0.14.3"


[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I","ARG","UP","B","SIM","N"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
